# zed-ink

./: Cargo.toml  README.md  extension.toml
examples/: FadingEchoes.ink
languages/ink/: config.toml  highlights.scm  indents.scm  injections.scm  outline.scm  overrides.scm  redactions.scm  runnables.scm  textobjects.scm
src/: lib.rs
